# RecursiveTime

./: .gitignore  AGENT.md  README.md  config.llm.example.json  pyproject.toml
backend/harnessing_ts/: __init__.py  chain_summary.py  cli.py  knowledge_graph.py  knowledge_prompts.py  node_state.py  orchestrator.py  paths.py  reference_feature_extractor.py  runtime_base.py  schema.py  server.py  server_setup.py  workspace_runtime.py
backend/harnessing_ts/agent/: control.py  sdk_runner.py  session_factory.py  translate.py
backend/harnessing_ts/api/: __init__.py  payloads.py  realtime.py
backend/harnessing_ts/config/: README.md  __init__.py  markdown.py
docs/: architecture.md
examples/training/: agent_lightning_template.py
frontend/: app.js  index.html  package.json  styles.css  vite.config.ts
frontend/src/: api.ts  main.ts  styles.css  types.ts
scripts/: prepare_runtime_base.py
tests/: conftest.py  test_ablation_variants.py  test_api_contract.py  test_chain_summary.py  test_frontend_realtime_architecture.py  test_knowledge_graph_realtime.py  test_knowledge_graph_tables.py  test_knowledge_query_availability.py  test_main_llm_config.py  test_main_progress_snapshot.py  test_mcp_intend_schema.py  test_mcp_node_routing.py  test_node_control_flow.py  test_node_protocol_recovery.py  test_pipeline_completion_guard.py  test_prompt_document_hygiene.py  test_realtime_events.py  test_reference_feature_extractor.py  test_reference_preview.py  test_runtime_base.py  test_sdk_runner_resilience.py  test_server_setup.py  test_tool_call_merging.py  test_workspace_reset.py
(+57 files in other folders)
